--- a/stylesheet.css
+++ b/stylesheet.css
@@ -217,7 +217,6 @@ p.hidden {
   width: 90%;
   border: 3px solid black;
   padding: 5px;
-  background-color: white;
 }
 
 .cart table {
@@ -315,6 +314,27 @@ div.text-right {
   margin: 10px 10px;
   font-weight: bold;
   padding: .5em;
+}
+
+/*Checkout Content*/
+.checkout {
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 90%;
+  border: 3px solid black;
+  padding: 5px;
+  background-color: white;
+  overflow: hidden;
+}
+
+.order-preview {
+  float: right;
+  width: 30%;
+}
+.information {
+  float: left;
+  width: 70%;
 }
 
 /*Image*/
