--- a/stylesheet.css
+++ b/stylesheet.css
@@ -139,11 +139,10 @@ button.addtocart-btn:hover {
 /*Modal*/
 .menu .modal {
   position: fixed;
-  right: 0;
   left: 0;
-  margin-right: auto;
-  margin-left: auto;
-  width: 40%;
+  right: 0;
+  top: 0;
+  bottom: 0;
 
   border-radius: 20px;
   background: rgba(115,215,255,.95);
