--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('header', {title: 'Main Menu'}) %>
+
+    <div class="menu">
+        <div id="menu_modal" class="modal">
+            <p>Click again to close.</p>
+            <h2 id="modal_title"></h2>
+            <img id="modal_img" src="" />
+            <p id="modal_desc"></p>
+            <p id="modal_price"></p>
+        </div>
+        <h2><%= title %></h2>
+    </div>
+
+  <script src="./scripts/menu.js"></script>
+
+<%- include('footer') %>
