added the ejs stuff :D

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -2,7 +2,7 @@
 
 <div class="checkout">
   <div class="information">
-    <h2 class="checkout-title">CHECKOUT</h2>
+    <h2 class="checkout-title"><%- title %></h2>
     <input type="checkbox" id="delivery-switch">
     <label for="delivery-switch">Check for Delivery</label>
     <form id="pickup-form" action="" method="post">
