--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,16 +14,16 @@
 <body>
 
     <header>
-        <h1><a href="./index.html" id="logo">HUNGRY BURGERS</a></h1>
+        <h1><a href="/" id="logo">HUNGRY BURGERS</a></h1>
         <nav>
             <ul>
-                <a href="./login.html" id="login-link">
+                <a href="/loginpage" id="login-link">
                     <li>Login/Register</li>
                 </a>
                 <a href="#">
                     <li>Navigation</li>
                 </a>
-                <a href="./cart.html">
+                <a href="/cartpage">
                     <li id="cart-btn">Cart(0 Items)</li>
                 </a>
                 <div id="total-cost">$0</div>
