--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('header', {title: 'Login and Registration'}) %>
 
 <div class="login-reg">
-    <h2>Account Login</h2>
+    <h2><%- title %></h2>
     <input type='checkbox' id='form-switch'>
     <form id='login-form'>
         <input type="text" placeholder="Username" id="log-name" required>
