added sessions login

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -39,7 +39,7 @@ nav ul li {
   background-color: orange;
   border-radius: 20px;
 }
-#total-cost {
+#user-welc {
   text-align: right;
   margin-right: 10px;
   margin-top: 10px;
