--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'Cart'}) %>
+<%- include('header', {title: 'Cart', user_welc: user}) %>
 
     <div class="cart">
         <h2><%- title %></h2>
