--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,16 +17,22 @@
         <h1><a href="/" id="logo">HUNGRY BURGERS</a></h1>
         <nav>
             <ul>
-                <a href="/loginpage" id="login-link">
-                    <li>Login/Register</li>
-                </a>
+                <% if (!user.length) { %>
+                  <a href="/loginpage" id="login-link">
+                      <li>Login/Register</li>
+                  </a>
+                <% } else { %>
+                  <a href='/logout' id="logout-link">
+                    <li>Logout</li>
+                  </a>
+                <% } %>
                 <a href="#">
                     <li>Navigation</li>
                 </a>
                 <a href="/cartpage">
                     <li id="cart-btn">Cart(0 Items)</li>
                 </a>
-                <div id="total-cost">$0</div>
+                <div id="user-welc"><%= user_welc %><span id="total-cost"> $0</span></div>
             </ul>
         </nav>
     </header>
