--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'Main Menu'}) %>
+<%- include('header', {title: 'Main Menu', user_welc: user}) %>
 
     <div class="menu">
         <div id="menu_modal" class="modal">
