--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: "Checkout"}) %>
+<%- include('header', {title: "Checkout", user_welc: user}) %>
 
 <div class="checkout">
   <div class="information">
