--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {title: 'Login and Registration', user_welc: user}) %>
+<%- include('header', {title: 'Login and Registration', usermsg, guest}) %>
 
 <div class="login-reg">
     <h2><%- title %></h2>
