--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -44,6 +44,9 @@ nav ul li {
   margin-right: 10px;
   margin-top: 10px;
 }
+#total-cost{
+  margin-left: 10px;
+}
 /*Header Links*/
 header h1 a {
   text-decoration: none;
