--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,19 +1,19 @@
-<%- include('header', {title: "Checkout", user_welc: user}) %>
+<%- include('header', {title: "Checkout", usermsg, guest}) %>
 
 <div class="checkout">
   <div class="information">
     <h2 class="checkout-title"><%- title %></h2>
     <input type="checkbox" id="delivery-switch">
-    <label for="delivery-switch">Check for Delivery</label>
+    <label for="delivery-switch">Pick up or Delivery</label>
     <form id="pickup-form" action="" method="post">
-      <input type="tel" placeholder="Phone number (xxxx-xxx-xxxx)" pattern="^\d{4}-\d{3}-\d{4}" required><p></p>
+      <input id='pickup-phone' type="tel" placeholder="Phone number (xxxx-xxx-xxxx)" pattern="^\d{4}-\d{3}-\d{4}" required><p></p>
       <button type='submit'>Confirm Order</button>
     </form>
     <form id="delivery-form" action="" method="post">
-      <input type="tel" placeholder="Phone number (xxxx-xxx-xxxx)" pattern="^\d{4}-\d{3}-\d{4}" required><p></p>
-      <input type="text" placeholder="Address" required>
+      <input id='delivery-phone' type="tel" placeholder="Phone number (xxxx-xxx-xxxx)" pattern="^\d{4}-\d{3}-\d{4}" required><p></p>
+      <input id='delivery-addr' type="text" placeholder="Address" required>
       <p class="payment">Payment Details</p>
-      <input type="tel" placeholder="Card Number" required><p></p>
+      <input id='delivery-card' type="tel" placeholder="Card Number" required><p></p>
       <button type='submit'>Confirm Order</button>
     </form>
     </form>
@@ -23,24 +23,26 @@
     <table>
     <tr>
       <th colspan='2' class="totals-label">Subtotal: </th>
-      <td><div class="totals-amt">$9</div></td>
+      <td><div id="sub-amt">$</div></td>
     </tr>
     <tr>
       <th colspan='2' class="totals-label">Sales Tax: </th>
-      <td><div class="totals-amt">$1</div></td>
+      <td><div id="salestax-amt">$</div></td>
     </tr>
     <tr>
       <th colspan='2' class="totals-label">Delivery: </th>
-      <td><div class="totals-amt">$-</div></td>
+      <td><div id="delivery-amt">$</div></td>
     </tr>
     <tr>
       <tfoot>
         <th colspan='2' class="full-total">TOTAL</th>
-        <td><div class="full-totalamt">$10</div></td>
+        <td><div id="final-totalamt">$</div></td>
       </tfoot>
     </tr>
     </table>
   </div>
 </div>
+
+<script src="./scripts/checkout.js"></script>
 
 <%- include('footer') %>
