--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,11 +3,14 @@
 <html>
 
 <head>
+    <title><%= title %></title>
     <script type="text/javascript" src="./scripts/jquery-3.2.0.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Latest compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= title %></title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
 </head>
 
