added coupon system

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -16,7 +16,11 @@
       <input id='delivery-card' type="tel" placeholder="Card Number" required><p></p>
       <button type='submit'>Confirm Order</button>
     </form>
+    <!-- <form id='coupon-form'>
+      <input type='text' placeholder='Coupon Code'>
+      <button type='submit'>Apply Coupon</button>
     </form>
+    <button type='submit' id='coupon-remove'>Remove Coupon</button> -->
   </div>
   <div class="order-review">
     <h3> ORDER REVIEW </h3>
