--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,6 +28,7 @@
                   <a href='/logout' id="logout-link">
                     <li>Logout</li>
                   </a>
+                  <li><a href='/adminpage'>Admin Page</a></li>
                 <% } %>
                 <a href="/cartpage">
                     <li id="cart-btn">Cart(0 Items)</li>
