--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -385,3 +385,19 @@ p.item-total {
 .receipt-totals p{
   font-size: 1.5em;
 }
+
+/*-------------------ADMIN.HTML-------------------*/
+/*--------------------------------------------------*/
+.coupons {
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 90%;
+  border: 3px solid black;
+  padding: 5px;
+  background-color: white;
+  text-align: center;
+}
+.coupons form{
+  display: block;
+}
